# my

./: LICENSE  Makefile  README.md  pyproject.toml
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
my_proj/: __init__.py
